<resources>
    <string name="app_name">TestRonasIT</string>
    <string name="change_city">Change city</string>
    <string name="location_image">Location image</string>
    <string name="my_location">My location</string>
    <string name="c" translatable="false">C</string>
    <string name="f" translatable="false">F</string>
    <string name="degree" translatable="false">º</string>
    <string name="percent_char" translatable="false">%</string>
    <string name="meeter_per_second">m/s</string>
    <string name="miles_per_hour">mph</string>
    <string name="mm_hg_art">mmHg Art.</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="chance_of_rain">Chance of rain</string>
    <string name="access_to_location">Access to get location</string>
    <string name="explanation_get_location">Access is required otherwise you will not be able to use the application</string>
    <string name="grant_access">Grant access</string>
    <string name="do_not">Do not</string>
    <string name="north">North</string>
    <string name="north_east">North-East</string>
    <string name="east">East</string>
    <string name="south_east">South-East</string>
    <string name="south">South</string>
    <string name="south_west">South-West</string>
    <string name="west">West</string>
    <string name="north_west">North-West</string>
    <string name="language">en</string>
    <string name="timeout_error_message">Timeout - Please check your internet connection</string>
    <string name="unknown_host_error_message">Unable to make a connection, please check your internet</string>
    <string name="connection_error_message">Connection shutdown. Please check your internet</string>
    <string name="server_error_message">Server is unreachable, please try again later</string>
    <string name="not_found_message">City not found</string>
    <string name="current_weather_image">Current weather image</string>
    <string name="ok" translatable="false">OK</string>
    <string name="enter_city">Enter city</string>
</resources>